# ulauncher-surfshark

./: .gitignore  LICENSE  README.md  main.py  manifest.json  pyproject.toml  server_country_map.json
