[project]
name = "ulauncher-surfshark"
version = "1.0"
description = "Ulauncher extention to connect to Surfshark VPN servers"
authors = [
    "Anshul Saini <saini.anshul.2012@gmail.com>"
]
license = "MIT"
readme = "README.md"
python = "^3.6"
homepage = "https://github.com/saini-anshul/ulauncher-surfshark"
repository = "https://github.com/saini-anshul/ulauncher-surfshark"
documentation = "https://github.com/saini-anshul/ulauncher-surfshark"

keywords = ["ulauncher", "extension", "surfshark", "surf", "vpn"]

classifiers = [
    "Topic :: Desktop Environment"
]

# Requirements
[dev-dependencies]
black = { version = "^18.3-alpha.0", python = "^3.6" }

[tool.black]
line-length = 88
target_version = ['py36']
include = '\.pyi?$'
